@@ -5,7 +5,8 @@
 Changes from 1.3 to 1.3.1
 =========================
 
-- None yet.
+- Function `abs` for computing the absolute value added.  Thanks to
+  Pauli Virtanen for the patch.
 
 Changes from 1.2 to 1.3
 =======================
